# asi-build

./: .env.example  .gitignore  .gitlab-ci.yml  ASI_BUILD_MANIFEST.json  ASI_BUILD_PRODUCTION_READY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  Dockerfile  FINAL_REPORT_FOR_BEN.md  GITLAB_MCP_GUIDE.md  HUGGINGFACE_INTEGRATION_REPORT.md  KENNY_INITIALIZATION_PROMPT.md  LETTER_TO_BEN_GOERTZEL.md  LICENSE  MCP_USER_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_PROGRESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  Phase-12-Collaboration-Channel.md  Phase-12-Consensus-Voting.md  README.md  ROADMAP.md  SECURITY.md  WIKI_ENRICHMENT_REPORT.md  __init__.py  __init__.py.backup_064001  _config.yml  asi_build_api.py  asi_build_launcher.py  core.py  create_all_wiki_pages.py  create_gitlab_project.py  create_huggingface_wiki.py  create_remaining_wiki.py  create_wiki_batch2.py  create_wiki_batch3.py  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
absolute_infinity/: README.md  __init__.py  absolute_infinity_deployment.py
agi_communication/: byzantine.py  discovery.py  evolution.py  knowledge_graph.py  multimodal.py  singularitynet.py
agi_deployment/: README.md  requirements.txt
agi_reproducibility/: PLATFORM_SUMMARY.md  README.md  __init__.py
ai_toolkit_integrations/agents/: .env.example  pyproject.toml
ai_toolkit_integrations/agents/core/: __init__.py  graph_modeling.py  migration_agent.py
ai_toolkit_integrations/agents/database/: factory.py  interface.py
ai_toolkit_integrations/agents/database/adapters/: __init__.py  mysql.py  postgresql.py
ai_toolkit_integrations/agents/examples/: __init__.py
ai_toolkit_integrations/agents/query_generation/: cypher_generator.py  schema_utilities.py
ai_toolkit_integrations/agents/tests/: __init__.py  test_integration.py
ai_toolkit_integrations/agents/utils/: config.py
ai_toolkit_integrations/mcp-memgraph/: .dockerignore  README.md  pyproject.toml
ai_toolkit_integrations/mcp-memgraph/src/mcp_memgraph/: __init__.py  main.py
ai_toolkit_integrations/mcp-memgraph/tests/: connection.py
archive/: README.md  cognitive_synergy_README.md  docker-compose.yml.old
archive/blockchain_ai/: pyproject.toml
archive/blockchain_ai/config/: config.yaml
archive/blockchain_ai/contracts/: package.json
archive/blockchain_ai/docs/: __init__.py
archive/blockchain_ai/scripts/: deploy.py  setup_dev_environment.sh  test_system.py
archive/blockchain_ai/src/api/: __init__.py
archive/blockchain_ai/src/crypto/: hash_manager.py
archive/blockchain_ai/src/ipfs/: data_manager.py  pinning_service.py
archive/blockchain_ai/src/utils/: __init__.py
archive/blockchain_ai/tests/: __init__.py
archive/sdk_toolkit/rust/: Cargo.toml
archive/sdk_toolkit/rust/src/: lib.rs
archive/sdk_toolkit/wasm-edge/: Cargo.toml  README.md
archive/sdk_toolkit/wasm-edge/docs/: ARCHITECTURE.md  TUTORIAL_IOT.md  TUTORIAL_MARS.md  TUTORIAL_VEHICLE.md
archive/sdk_toolkit/wasm-edge/examples/autonomous_vehicle/: Cargo.toml
archive/sdk_toolkit/wasm-edge/examples/autonomous_vehicle/src/: communication.rs  config.rs  lidar.rs  planner.rs  safety.rs  vision.rs
archive/sdk_toolkit/wasm-edge/examples/humanoid_robot/: Cargo.toml
archive/sdk_toolkit/wasm-edge/examples/humanoid_robot/src/: motion.rs  speech.rs
archive/sdk_toolkit/wasm-edge/orchestrator/src/: scheduler.rs
archive/sdk_toolkit/wasm-edge/src/components/egress/: telemetry.rs
archive/sdk_toolkit/wasm-edge/src/components/inference/: engine.rs
archive/sdk_toolkit/wasm-edge/src/components/ingress/: camera.rs
archive/sdk_toolkit/wasm-edge/src/components/postprocess/: tracker.rs
archive/sdk_toolkit/wasm-edge/src/components/preprocess/: normalizer.rs
archive/sdk_toolkit/wasm-edge/wit/: inference.wit
asi-code/: .gitignore  README.md  asi-code.config.yml  bunfig.toml  package-lock.json  package.json  test-asi-code.ts  test-chat.json  test-streaming.json  tsconfig.json
bci_complete/: README.md  __init__.py
benchmarks/: README.md  bench_consciousness.py
bio_inspired/: core.py
bio_inspired_complete/: __init__.py
blockchain_ai/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
branding/: ASI_BRAND_GUIDE.md  BRAND_ASSETS_SUMMARY.md
circuits/: WithdrawalVerifier.sol  WithdrawalVerifierBridge.sol  generate_test_input.js  package.json  withdrawal.circom
cognitive_synergy/: __init__.py
compute_pool/: __init__.py
configs/: default.yaml
consciousness/: demo_consciousness.py  recursive_improvement.py  theory_of_mind.py
consciousness_engine/: global_workspace.py  memory_integration.py  qualia_processor.py  self_awareness.py  sensory_integration.py  temporal_consciousness.py
consciousness_framework/: __init__.py
constitutional_ai_complete/: __init__.py  framework.py
cosmic/: __init__.py
decentralized_training/: __init__.py
deployments/: latest_report.txt  sepolia.json  sepolia_20260412_125929.json
docs/: DEPLOYMENT_GUIDE.md  (+3 more)
src/asi_build/integrations/langchain-memgraph/: README.md  pyproject.toml
src/asi_build/integrations/langchain-memgraph/langchain_memgraph/: __init__.py  retrievers.py  toolkits.py  tools.py
src/asi_build/integrations/langchain-memgraph/langchain_memgraph/chains/: graph_qa.py
src/asi_build/integrations/langchain-memgraph/langchain_memgraph/graphs/: graph_store.py  memgraph.py
src/asi_build/integrations/langchain-memgraph/tests/integration_tests/: test_knowledge_graph.py  test_langgraph.py  test_qa_chain.py  test_tools.py
src/asi_build/integrations/langchain-memgraph/tests/unit_tests/: test_tools.py
src/asi_build/memgraph_toolbox/: README.md  __init__.py  pyproject.toml
src/asi_build/memgraph_toolbox/src/memgraph_toolbox/: memgraph_toolbox.py
src/asi_build/memgraph_toolbox/src/memgraph_toolbox/api/: memgraph.py  toolbox.py
src/asi_build/memgraph_toolbox/src/memgraph_toolbox/tests/: test_toolbox.py  test_tools.py
src/asi_build/memgraph_toolbox/src/memgraph_toolbox/tools/: index.py  schema.py  trigger.py
src/asi_build/memgraph_toolbox/src/memgraph_toolbox/utils/: logging.py
(+2275 files in other folders)
