[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kenny-blockchain-audit-trail"
version = "1.0.0"
description = "Blockchain-based audit trail system for Kenny AGI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Kenny AGI Team", email = "team@kenny-agi.com"},
]
keywords = [
    "blockchain",
    "audit-trail", 
    "web3",
    "ipfs",
    "cryptography",
    "ethereum",
    "polygon",
    "smart-contracts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "web3>=6.15.1",
    "eth-account>=0.10.0",
    "ipfshttpclient>=0.8.0a2",
    "aiohttp>=3.9.3",
    "cryptography>=42.0.4",
    "pycryptodome>=3.20.0",
    "nacl>=1.5.0",
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "aiofiles>=23.2.0",
    "orjson>=3.9.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.2",
]
database = [
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.2",
    "aioredis>=2.0.1",
]
graphql = [
    "graphene>=3.3",
    "graphql-core>=3.2.3",
    "strawberry-graphql>=0.219.2",
]
monitoring = [
    "prometheus-client>=0.20.0",
    "sentry-sdk>=1.40.6",
    "python-json-logger>=2.0.7",
]
contracts = [
    "py-solc-x>=1.12.0",
    "brownie-eth>=1.20.4",
]
data-analysis = [
    "pandas>=2.2.0",
    "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/kenny-agi/blockchain-audit-trail"
Documentation = "https://docs.kenny-agi.com/blockchain-audit-trail"
Repository = "https://github.com/kenny-agi/blockchain-audit-trail"
"Bug Tracker" = "https://github.com/kenny-agi/blockchain-audit-trail/issues"

[project.scripts]
kenny-audit = "kenny_blockchain.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/contracts",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ipfshttpclient.*",
    "nacl.*",
    "brownie.*",
    "solcx.*",
    "Crypto.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "blockchain: marks tests that require blockchain connection",
    "ipfs: marks tests that require IPFS connection",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"