[project]
name = "memgraph-toolbox"
version = "0.1.4"
description = "Memgraph toolbox library for Memgraph AI tools and utilities"
readme = "README.md"
authors = [
  { name = "antejavor", email = "ante.javor@memgraph.io" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["memgraph", "graph", "ai", "toolkit"]

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "neo4j>=5.28.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[project.urls]
"Homepage" = "https://github.com/memgraph/ai-toolkit"
"Source" = "https://github.com/memgraph/ai-toolkit"
"Issues" = "https://github.com/memgraph/ai-toolkit/issues"

[build-system]
requires = ["hatchling", "build"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"